uoproxy (0.1.1) unstable; urgency=low

  * corrected the getopt string
  * remember equip packets
  * parse encoded speech
  * new command "%drop" which drops the item currently held
  * bugfix: serials are in network byte order
  * read equipment list from mobile_incoming packet
  * handle container packets: open, update, content
  * delete all child objects when an entity is deleted
  * bugfix: check c->reconnecting before c->in_game
  * don't forward relay packet, connect to game server internally
  * show real character name while attaching
  * borrowed packet length table from wolfpack
  * when reconnecting, connect to the login server
  * don't delete connection when other clients are online
  * flush input buffer before select()
  * added DUMP_USE option

 --

uoproxy (0.1.0) unstable; urgency=low

  * initial version

 -- Max Kellermann <max@duempel.org>  Wed, 14 Dec 2005 23:32:35 +0100
